titre au format tfp

--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -16,7 +16,7 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass[]{tfp05symp}
+\documentclass[tfpsymp]{tfp05symp}
 
 \usepackage{amsmath}
 \usepackage{url}
@@ -44,9 +44,24 @@
 %\subtitle{}
 
 %\authorinfo{Submitted for blind review}{}{}
-\author{S. Conchon\and J.-C. Filli\^atre\and J. Signoles}
+
+\author
+    {Sylvain Conchon\inst{1} \and 
+     Jean-Christophe Filli\^atre\inst{1} \and 
+     Julien Signoles\inst{2}\protect\footnote[1]{This work was mostly done
+    while the third author was at LRI.}}
+\authorrunning{S. Conchon \and J.-C. Filli\^atre \and J. Signoles}
+
 \institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
-  \texttt{\{conchon,filliatr\}@lri.fr Julien.Signoles@cea.fr}}
+  \email{\{conchon,filliatr\}@lri.fr}
+  \and Laboratoire S\^uret\'e des Logiciels CEA-List \\
+  \email{Julien.Signoles@cea.fr}}
+
+%% \institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
+%%   \texttt{\{conchon,filliatr\}@lri.fr Julien.Signoles@cea.fr}}
+
+%\email{conchon@lri.fr filliatr@lri.fr Julien.Signoles@cea.fr}
+
 
 \maketitle
 
