--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -54,7 +54,7 @@
 
 \institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
   \email{\{conchon,filliatr\}@lri.fr}
-  \and Laboratoire S\^uret\'e des Logiciels CEA-List \\
+  \and Laboratoire S\^uret\'e des Logiciels, CEA-LIST \\
   \email{Julien.Signoles@cea.fr}}
 
 %% \institute{LRI Universit\'e Paris Sud 91405 Orsay France \\
