debut de benchs incomplet

--- a/slides/lsl/slides.tex
+++ b/slides/lsl/slides.tex
@@ -63,7 +63,7 @@
   \begin{center}
   \begin{points}
   \item Comprendre (la philosophie de) la bibliothèque
-  \item Promouvoir les foncteurs
+  \item Démocratiser les foncteurs
   \end{points}
   \end{center}
 
@@ -379,7 +379,7 @@ parseur GML
 \emph{Quelques remarques sur les foncteurs:}
 
 \begin{points}
-\item \bleu{Quelques limitations} du système de modules nous ont gênés
+\item \bleu{Quelques limitations} du système de modules nous ont gênées
   \begin{itemize}
   \item Bug report \#2049 (faiblesse des modules applicatifs)
   \item Principalement, ne pas pouvoir réunir deux structures ayant un type ou
